--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <p>Custom HTTP server in C++ mimicking nginx features. Handles requests, config parsing.</p>
     </a> -->
 
-    <a href="" class="project-card" target="_blank">
+    <a href="https://https://rad869.github.io/Resume" class="project-card" target="_blank">
       <h3>Portfolio Website</h3>
       <p>This resume website built with HTML, CSS, and JS. Responsive and theme-toggle supported.</p>
     </a>
