--- a/index.html
+++ b/index.html
@@ -49,43 +49,16 @@
       <h3>webServ</h3>
       <p>Custom HTTP server in C++ mimicking nginx features. Handles requests, config parsing.</p>
     </a> -->
+    
+        <a href="https://rrabeari.itch.io/lumix-webgl" class="project-card" target="_blank">
+          <h3>Lumix Game (Gam Jam 42 Antananarivo)</h3>
+          <p>3D Game using Unity, created in 42h from scratch.</p>
+        </a>
 
     <a href="https://https://rad869.github.io/Resume" class="project-card" target="_blank">
       <h3>Portfolio Website</h3>
       <p>This resume website built with HTML, CSS, and JS. Responsive and theme-toggle supported.</p>
     </a>
-
-  </div>
-</section>
-
-
-
-  <section class="section education">
-    <h2>Education</h2>
-    <p>42 Antananarivo - Software Engineering Program (Ongoing)</p>
-    <p>University of Antananarivo - Master in Physics and Applications (2019-2024)</p>
-  </section>
-
-  <section class="section skills">
-    <h2>Skills</h2>
-    <ul class="skills-list">
-      <li>C</li>
-      <li>C++</li>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JavaScript</li>
-      <li>Git</li>
-      <li>Shell</li>
-      <li>React (basic)</li>
-    </ul>
-  </section>
-
-  <section class="section contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:radorabe775@gmail.com">radorabe775@gmail.com</a></p>
-    <p>
-      <a href="assets/RabearimananaRadoniaina(Resume).pdf" download>📄 Download Resume (PDF)</a>
-    </p>
   </section>
 
   <footer>
