--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Resume - [Your Name]</title>
   <link href="style.css" rel="stylesheet" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/favIcon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets//favIcon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets//favIcon/favicon-16x16.png">
+  <link rel="manifest" href="./assets//favIcon/site.webmanifest">
+  <title>My Resume - RABEARIMANANA Radoniaina</title>
   <script src="script.js" defer></script>
 </head>
 <body class="light-mode">
   <header>
-    <h1>RBEARIMANANA Radoniaina</h1>
+    <h1>RABEARIMANANA Radoniaina</h1>
     <p>Web Developer | Student at 42 Antananarivo</p>
     <button id="toggle-theme">🌙 Toggle Theme</button>
   </header>
@@ -55,7 +59,7 @@
           <p>3D Game using Unity, created in 42h from scratch.</p>
         </a>
 
-    <a href="https://https://rad869.github.io/Resume" class="project-card" target="_blank">
+    <a href="https://rad869.github.io/Resume" class="project-card" target="_blank">
       <h3>Portfolio Website</h3>
       <p>This resume website built with HTML, CSS, and JS. Responsive and theme-toggle supported.</p>
     </a>
