add experience gam jam 42

--- a/index.html
+++ b/index.html
@@ -27,12 +27,20 @@
 
   <section class="section experience">
     <h2>Experience</h2>
-    <strong>Mini Projects - 42</strong> — Basic Shell, Git, C, Web basics
     <ul>
-        <li>minishell (Create our own bash but in mini version)</li>
-        <li>miniRT (RayTracing implementation using C)</li>
-        <li>webServ (Create our own server HTTP like nginx using C++)</li>
+      <li>
+        <strong>Mini Projects - 42</strong> — Basic Shell, Git, C, Web basics
+        <ul>
+            <li>minishell (Create our own bash but in mini version)</li>
+            <li>miniRT (RayTracing implementation using C)</li>
+            <li>webServ (Create our own server HTTP like nginx using C++)</li>
+        </ul>
+      </li>
+      <li>
+        <Strong>Gam Jam 42 Antananarivo (oct 2024)</Strong> - Unity, C# (basics)
+      </li>
     </ul>
+    
   </section>
 
   <section class="section projects">
