--- a/index.html
+++ b/index.html
@@ -73,6 +73,31 @@
     </a>
   </section>
 
+  <section class="section education">
+    <h2>Education</h2>
+    <p>42 Antananarivo - Software Engineering Program (Ongoing)</p>
+  </section>
+
+  <section class="section skills">
+    <h2>Skills</h2>
+    <ul class="skills-list">
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>Git</li>
+      <li>Shell</li>
+      <li>React (basic)</li>
+    </ul>
+  </section>
+
+  <section class="section contact">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:you@example.com">you@example.com</a></p>
+    <p>
+      <a href="assets/resume.pdf" download>📄 Download Resume (PDF)</a>
+    </p>
+  </section>
+
   <footer>
     <p>&copy; 2025 RABEARIMANANA Radoniaina. All rights reserved.</p>
   </footer>
