--- a/index.html
+++ b/index.html
@@ -76,11 +76,14 @@
   <section class="section education">
     <h2>Education</h2>
     <p>42 Antananarivo - Software Engineering Program (Ongoing)</p>
+    <p>University of Antananarivo - Master in Physics and Applications (2019-2024)</p>
   </section>
 
   <section class="section skills">
     <h2>Skills</h2>
     <ul class="skills-list">
+      <li>C</li>
+      <li>C++</li>
       <li>HTML</li>
       <li>CSS</li>
       <li>JavaScript</li>
@@ -92,9 +95,9 @@
 
   <section class="section contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:you@example.com">you@example.com</a></p>
+    <p>Email: <a href="mailto:radorabe775@gmail.com">you@example.com</a></p>
     <p>
-      <a href="assets/resume.pdf" download>📄 Download Resume (PDF)</a>
+      <a href="assets/RabearimananaRadoniaina(Resume).pdf" download>📄 Download Resume (PDF)</a>
     </p>
   </section>
 
