--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
   <section class="section contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:radorabe775@gmail.com">you@example.com</a></p>
+    <p>Email: <a href="mailto:radorabe775@gmail.com">radorabe775@gmail.com</a></p>
     <p>
       <a href="assets/RabearimananaRadoniaina(Resume).pdf" download>📄 Download Resume (PDF)</a>
     </p>
